--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,13 @@ html{
   box-sizing: inherit;
   }
 
-  #mid::-webkit-scrollbar{
+  /* #mid::-webkit-scrollbar{
     display: none;
   }
+.scrollbar-hide {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;     
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  
+} */
