added clerk and homepage

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,8 +60,8 @@
 }
 
 .markdown-body blockquote {
-  border-left: 4px solid #2e3d49;
-  background-color: #282c34;
+  border-left: 4px solid #1967a7;
+  background-color: #0a5cff;
   padding-left: 20px;
   font-style: italic;
 }
